# retailer-admin

./: README.md  pyproject.toml
.github/workflows/: deployment.yml  pipeline.yml
deploy/: Dockerfile
retailer_admin/: run.sh
retailer_admin/order/: admin.py  apps.py  models.py
retailer_admin/product_categories/: admin.py
retailer_admin/products/: admin.py  models.py
retailer_admin/retailer_admin/: settings.py
retailer_admin/shop_products/: admin.py
retailer_admin/shops/: admin.py  models.py
retailer_admin/user_addresses/: admin.py  apps.py  models.py
retailer_admin/users/: admin.py  models.py
retailer_admin/users/migrations/: 0002_auto_20220501_2049.py
