[tool.poetry]
name = "retailer-admin"
version = "0.1.0"
description = ""
authors = ["d_ivahnencko <ivahnencko01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
bcrypt = "^3.2.2"
boto3 = "^1.24.2"
django-storages = "^1.12.3"
passlib = "^1.7.4"
Pillow = "^9.1.1"
python-dotenv = "^0.20.0"
redis = "^4.3.3"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
